# LyricInsight

./: .gitignore  README.md  environment.yml  main.py  prompts.py  pyproject.toml  setup.py  transformed.txt
examples/: haruhikage.txt
lyricinsight/: main.py  prompts.py
tests/: test_main.py
transformed/: a.txt
