[project]
name = "lyricinsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "openai>=1.60.1",
    "typeguard>=4.4.1",
]

[project.optional-dependencies]
test = [
    "pytest",    # 测试框架
    "pytest-cov", # 测试覆盖率插件
]